snippets/forever_pending.yaml
apiVersion: v1
kind: Pod
metadata:
  name: forever-pending-pod
  namespace: kubeflow
spec:
  containers:
    - name: too-many-gpu
      image: busybox:1.28
      command: ['sh', '-c', 'while true; do echo $(date); sleep 1; done']
      resources:
        requests:
          cpu: 4096
