snippets/mysql-tester.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-tester
spec:
  containers:
    - name: mysql-cli
      image: mysql:8.0.34-debian
      command: ['/bin/sh', '-c', 'while true; do echo $(date); sleep 1; done']
