snippets/redis-tester.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-tester
spec:
  containers:
    - name: redis-cli
      image: redis:7.0.10
      command: ['/bin/sh', '-c', 'while true; do echo $(date); sleep 1; done']
