snippets/spinner-with-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spinner-with-hostpath
spec:
  containers:
    - name: myapp-container
      image: busybox:1.28
      command: ['sh', '-c', 'while true; do echo $(date); sleep 1; done']
      volumeMounts:
        - name: cfs
          mountPath: /data/
  volumes:
    - name: cfs
      hostPath:
        path: /data/
  nodeSelector:
    cluster.vke.volcengine.com/node-name: node-z2dx9f
