snippets/very_big_image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: very-big-image 
  namespace: kubeflow
spec:
  containers:
    - name: big-image-8g
      image: hpcaitech/colossalai:0.2.4
      command: ['sh', '-c', 'while true; do echo $(date); sleep 1; done']
