snippets/python-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-deployment
  namespace: python-deployment
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: python-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  namespace: python-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-deployment
  template:
    metadata:
      labels:
        app: python-deployment
    spec:
      containers:
      - name: app
        image: python:3.10-slim-bullseye
        command:
        - python
        - -c
        - |
          [...]
        imagePullPolicy: IfNotPresent
