snippets/request-visualizer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-visualizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request-visualizer
  template:
    metadata:
      labels:
        app: request-visualizer
    spec:
      containers:
      - name: app
        image: python:3.10-slim-bullseye
        command:
        - python
        - -c
        - |
          [...]
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: request-visualizer
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: request-visualizer
